--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,7 +297,7 @@ h6 {
   position: absolute;
   top: 55px;
   right: 15px;
-  bottom: 15px;
+  /* bottom: 15px; */
   left: 15px;
   padding: 10px 0;
   background-color: #fff;
@@ -595,7 +595,7 @@ section {
   box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
   transition: all 0.3s ease-in-out;
   border-radius: 4px;
-  text-align: center;
+  /* text-align: center; */
   border-bottom: 3px solid #fff;
 }
 
